<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/touch_interceptor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.translator.navigation.translate.CutCopyPasteEditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@xml/border"
                android:gravity="top"
                android:hint="@string/edit_text_translate"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:paddingBottom="32dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:scrollHorizontally="false"
                android:textCursorDrawable="@drawable/custom_cursor_drawable" />

            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/input_text"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:tint="@color/colorGray7"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:contentDescription="@string/clear"
                android:src="@mipmap/ic_clear_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
          <!--  <ImageView
                android:id="@+id/yandex_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/yandex"
                android:src="@drawable/yandex_icon" /> -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:layout_marginLeft="8dp"
                android:id="@+id/yandex_translate"
                android:text="@string/translate_with_yandex" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:id="@+id/error_layout"
            android:visibility="gone"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/error_text"
                android:textColor="@android:color/black"
                android:text="@string/connection_error"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:id="@+id/error_description_text"
                android:text="@string/check_internet_connection_and_try_again"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:text="@string/try_again"
                android:layout_gravity="center"
                android:id="@+id/try_again_button"
                android:layout_height="wrap_content" />
        </LinearLayout>


       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:descendantFocusability="beforeDescendants"
            android:visibility="gone"
            android:id="@+id/progress_layout"
            android:layout_height="match_parent">
            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:id="@+id/progress"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Large" />
        </LinearLayout> -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/translation_layout"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/ic_bookmark_black_24dp"
                android:tint="@color/colorGray7" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_toStartOf="@+id/favorite_button"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/result_layout"
                android:clickable="true"
                android:descendantFocusability="beforeDescendants"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/result_text"
                    android:paddingRight="8dp"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </ScrollView>



            <ScrollView
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/result_layout"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:descendantFocusability="beforeDescendants"
                android:layout_toStartOf="@+id/favorite_button"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:id="@+id/dict_layout"
                    android:focusableInTouchMode="true"
                    android:clickable="true"
                    android:layout_height="wrap_content">
                </LinearLayout>

            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>