...
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:id="@+id/input_lang"
                    android:gravity="right|center"
                    android:layout_toLeftOf="@+id/switch_lang"
                    android:layout_centerVertical="true"
                    android:layout_height="match_parent" />
                <ImageButton
                    android:layout_width="wrap_content"
...
